// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TabMyDelegations view should show a message if not staked yet to any validator 1`] = `
<data-view-stub
  dataempty="true"
  loaded="true"
>
  <tm-data-msg-stub
    icon="sentiment_dissatisfied"
  >
    <div>
      
      No Active Delegations
    
    </div>
     
    <div>
      
      Looks like you haven't delegated any uatoms yet. Head over to
      the
      
      <router-link-stub
        to="[object Object]"
      >
        
        validator list
      
      </router-link-stub>
      
      to make your first delegation!
    
    </div>
  </tm-data-msg-stub>
   
  <div>
    <table-validators-stub
      validators=""
    />
     
    <h3
      class="tab-header transactions"
    >
      
      Pending Undelegations
    
    </h3>
     
    <div
      class="unbonding-transactions"
    />
  </div>
</data-view-stub>
`;

exports[`Component: TabMyDelegations view should show committed validators 1`] = `
<data-view-stub
  loaded="true"
>
  <tm-data-msg-stub
    icon="sentiment_dissatisfied"
    slot="no-data"
  >
    <div>
      
      No Active Delegations
    
    </div>
     
    <div>
      
      Looks like you haven't delegated any uatoms yet. Head over to
      the
      
      <router-link-stub
        to="[object Object]"
      >
        
        validator list
      
      </router-link-stub>
      
      to make your first delegation!
    
    </div>
  </tm-data-msg-stub>
   
  <div
    slot="data"
  >
    <table-validators-stub
      validators="[object Object]"
    />
     
    <h3
      class="tab-header transactions"
    >
      
      Pending Undelegations
    
    </h3>
     
    <div
      class="unbonding-transactions"
    />
  </div>
</data-view-stub>
`;

exports[`Component: TabMyDelegations view should show unbonding validators and the current committed validator 1`] = `
<data-view-stub
  dataempty="true"
  loaded="true"
>
  <tm-data-msg-stub
    icon="sentiment_dissatisfied"
  >
    <div>
      
      No Active Delegations
    
    </div>
     
    <div>
      
      Looks like you haven't delegated any uatoms yet. Head over to
      the
      
      <router-link-stub
        to="[object Object]"
      >
        
        validator list
      
      </router-link-stub>
      
      to make your first delegation!
    
    </div>
  </tm-data-msg-stub>
   
  <div>
    <table-validators-stub
      validators=""
    />
     
    <h3
      class="tab-header transactions"
    >
      
      Pending Undelegations
    
    </h3>
     
    <div
      class="unbonding-transactions"
    >
      <li-stake-transaction-stub
        bondingdenom="uatom"
        fees="[object Object]"
        transaction="[object Object]"
        txtype="cosmos-sdk/MsgUndelegate"
        unbondingtime="52000"
        url="/staking/validators"
        validators=""
      />
    </div>
  </div>
</data-view-stub>
`;
